--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ header {
     position: relative;
     background-color: black;
     color: white;
-    padding-bottom: 50px;
+    padding-bottom: 5%;
     display: block;
     align-items: center;      
     justify-content: center; 
