--- a/style.css
+++ b/style.css
@@ -17,6 +17,13 @@ header {
     height: 80px;
     }
 
+.logo{
+    position: absolute;
+    top: 0;
+    left: 2%;
+    height: 120%;
+}
+
 nav {
       background-color: black;
       display: flex;
