--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ header {
     top: 0;
     margin-left: 2%;
     left: 2%;
-    height: 80%;
-    lenght: 80%;
+    height: 50%;
+    width: 50%;
 }
 
 nav {
